# ghcjs-servant-client-bug

./: .gitignore  README.md  bug.cabal  launch.sh  stack.yaml
app/: Main.hs
src/Bug/: Servant.hs
ui/: copy-assets  stack.yaml  ui-deploy  ui.cabal
ui/app/: Main.hs
ui/assets/: index-dev.html  index.html
ui/src/: Client.hs
